# cookie-clicker-afk

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: cookie_clicker.rs  main.rs  telegram.rs
src/cookie_clicker/: backup.rs  mod.rs  tasks.rs
src/cookie_clicker/sql/: get_latest_backup.sql  insert_backup.sql  schema.sql
src/telegram/: commands.rs  mod.rs
